# irreverence

./: .gitignore  .gitmodules  CMakeLists.txt
game/assets/shaders/: OpaqueAnimated.frag  OpaqueAnimated.vert  OpaqueModel.frag  OpaqueModel.vert  OverlayBloomDS.frag  OverlayBloomUS.frag  OverlayLevels.frag  OverlayPrimitive.frag  OverlayPrimitive.vert  OverlayScreen.frag  OverlayScreen.vert  OverlayText.frag  OverlayText.vert  OverlayTransp.frag  TranspModel.frag  meshanimated.vert  meshmodel.vert  test.frag  test.vert
scripts/: build.sh  full_setup.sh  run.sh  setup.sh  setup_debug.sh
src/cl_dll/: CMakeLists.txt  cbase.cpp  cbase.h  cfuncs.cpp  cfuncs.h  client.cpp  util.h
src/dlls/: CMakeLists.txt  cbase.cpp  cbase.h  efuncs.cpp  efuncs.h  game.cpp  game.h
src/engine/: CMakeLists.txt  client.c  client.h  cvar.c  cvar.h  edict.c  edict.h  engine.c  engine.h  input.c  input.h  log.c  log.h  net.c  net.h  net_chan.c  net_chan.h  net_messages.h  physics.c  physics.h  server.c  server.h  stb.c
src/engine/audio/: audio.c  audio.h  mp3.c  sound.c  sound.h  wav.c
src/engine/physics/: physics.c  physics.h
src/engine/renderer/: animation.c  animation.h  batch.c  batch.h  font.c  font.h  framebuffer.c  framebuffer.h  lighting.c  lighting.h  material.c  material.h  mesh.c  mesh.h  model.c  model.h  renderer.c  renderer.h  shader.c  shader.h  storagebuffer.c  storagebuffer.h  texture.c  texture.h  texturearray.c  texturearray.h  uniform.c  uniform.h
src/math/: CMakeLists.txt  common.c  common.h  mat4.c  mat4.h  quat.c  quat.h  random.c  random.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  vec4.h
src/platform/: CMakeLists.txt  assert.h  dir.h  io.h  lib.h  memory.h  mutex.h  path.h  sys.h  tcp.h  thread.h  udp.h
src/platform/linux/: assert.c  dir.c  io.c  lib.c  memory.c  mutex.c  path.c  sys.c  tcp.c  thread.c  udp.c
src/public/: aabb.h  cl_dll.h  cvar.h  edict.h  engine.h
src/runtime/: CMakeLists.txt  main.c
src/util/: CMakeLists.txt  array.c  array.h  bit.h  buffer.c  buffer.h  endian.c  endian.h  sort.c  sort.h
